Replacing Scope#findLocalScope with Scope#findFirstLocalScope to use the symbol table.